--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2826,7 +2826,7 @@ input, select, textarea {
 			background-color: #333;
 			color: rgba(255, 255, 255, 0.75);
 			background-attachment: fixed,							fixed;
-			background-image: url("../../images/header.jpg"), url("");
+			background-image: url("../../images/header.jpg"), url("../../images/BackgroundMountains.jpg");
 			background-size: auto,							cover;
 		}
 
