--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2826,7 +2826,7 @@ input, select, textarea {
 			background-color: #333;
 			color: rgba(255, 255, 255, 0.75);
 			background-attachment: fixed,							fixed;
-			background-image: url("../../images/header.jpg"), url("../../images/BackgroundMountains.jpg");
+			background-image: url("../../images/BackgroundMountains.jpg"), url("../../images/BackgroundMountains.jpg");
 			background-size: auto,							cover;
 		}
 
@@ -2917,7 +2917,7 @@ input, select, textarea {
 		background-color: #4686a0;
 		color: rgba(255, 255, 255, 0.75);
 		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("images/overlay2.png"), url("images/overlay3.svg"), linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #4361c2);
+		background-image: url("images/BackgroundMountains.jpg.png"), url("images/BackgroundMountains.jpg.svg"); /*, linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #4361c2);*/
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
 		overflow: hidden;
