--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2916,7 +2916,8 @@ input, select, textarea {
 		padding: 9em 0 9em 0 ;
 		background-color: #4686a0;
 		color: rgba(255, 255, 255, 0.75);
-		background-attachment: fixed,							fixed,							fixed;
+		background-attachment: scroll,							scroll,							scroll;
+		background-repeat: no-repeat;
 		background-image: url("../../images/BackgroundMountains.jpg"), url("../../images/BackgroundMountains.jpg"); /*, linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #4361c2);*/
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
