--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2920,7 +2920,7 @@ input, select, textarea {
 		background-repeat: no-repeat;
 		background-image: url("../../images/BackgroundMountains.jpg"), url("../../images/BackgroundMountains.jpg"); /*, linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #4361c2);*/
 		background-position: top left,						center center,					center center;
-		background-size: auto,							cover,							cover;
+		background-size: cover,							cover,							cover;
 		overflow: hidden;
 		position: relative;
 		text-align: center;
