--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2823,7 +2823,8 @@ input, select, textarea {
 			background-color: rgba(199, 234, 227, 1.0);	
 		}
 
-		.main.style2 {
+		.main.style2 
+		{
 			background-color: rgba(204, 234, 213, 1.0f);
 			color: rgba(204, 234, 213, 1.0f);
 			/*color: rgba(252, 255, 228, 0.75);*/
@@ -2833,7 +2834,7 @@ input, select, textarea {
 		}
 
 			.main.style2 a {
-				border-bottom-color: rgba(42, 89, 133, 0.5);
+				border-bottom-color: rgba(204, 234, 213, 1.0f);
 			}
 
 				.main.style2 a:hover {
@@ -2866,7 +2867,7 @@ input, select, textarea {
 				.main.style2 input[type="button"]:hover,
 				.main.style2 button:hover,
 				.main.style2 .button:hover {
-					background-color: rgba(255, 255, 255, 0.125);
+					background-color: rgba(204, 234, 213, 1.0f); /*rgba(255, 255, 255, 0.125);*/
 				}
 
 				.main.style2 input[type="submit"]:active,
@@ -2874,7 +2875,7 @@ input, select, textarea {
 				.main.style2 input[type="button"]:active,
 				.main.style2 button:active,
 				.main.style2 .button:active {
-					background-color: rgba(255, 255, 255, 0.25);
+					background-color: rgba(204, 234, 213, 1.0f); /* rgba(255, 255, 255, 0.25);*/
 				}
 
 				.main.style2 input[type="submit"].primary,
@@ -2882,7 +2883,7 @@ input, select, textarea {
 				.main.style2 input[type="button"].primary,
 				.main.style2 button.primary,
 				.main.style2 .button.primary {
-					background-color: #ffffff;
+					background-color: rgba(204, 234, 213, 1.0f);
 					box-shadow: inset 0 0 0 1px #ffffff !important;
 					color: #333 !important;
 				}
@@ -2892,7 +2893,7 @@ input, select, textarea {
 					.main.style2 input[type="button"].primary:hover,
 					.main.style2 button.primary:hover,
 					.main.style2 .button.primary:hover {
-						background-color: rgba(255, 255, 255, 0.125) !important;
+						background-color: rgba(204, 234, 213, 1.0f); /*rgba(255, 255, 255, 0.125)*/ !important;
 						color: #ffffff !important;
 					}
 
@@ -2901,7 +2902,7 @@ input, select, textarea {
 					.main.style2 input[type="button"].primary:active,
 					.main.style2 button.primary:active,
 					.main.style2 .button.primary:active {
-						background-color: rgba(255, 255, 255, 0.25) !important;
+						background-color: rgba(204, 234, 213, 1.0f); /*rgba(255, 255, 255, 0.25)*/ !important;
 					}
 
 			.main.style2 ul.major-icons li .icon {
