--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2842,15 +2842,15 @@ input, select, textarea {
 				}
 
 			.main.style2 h1, .main.style2 h2, .main.style2 h3, .main.style2 h4, .main.style2 h5, .main.style2 h6, .main.style2 strong, .main.style2 b {
-				color: #ffffff;
+				color: rgba(204, 234, 213, 1.0f);
 			}
 
 			.main.style2 header p {
-				color: #ffffff;
+				color: rgba(204, 234, 213, 1.0f);
 			}
 
 			.main.style2 header.major:after {
-				background: #ffffff;
+				background: rgba(204, 234, 213, 1.0f);
 			}
 
 			.main.style2 input[type="submit"],
