--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2820,7 +2820,7 @@ input, select, textarea {
 
 		.main.style1 
 		{
-			background-color: rgba(0.0f, 0.0f, 0.0f, 1.0f); /*rgba(199, 234, 227, 1.0);	*/
+			color: rgba(199, 234, 227, 1.0);	
 		}
 
 		.main.style2 
