--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2820,13 +2820,14 @@ input, select, textarea {
 
 		.main.style1 
 		{
-			color: rgba(199, 234, 227, 1.0);	
+			background-color: rgba(199, 234, 227, 1.0);	
+			color: rgba(0.0f, 0.0f, 0.0f, 1.0f);
 		}
 
 		.main.style2 
 		{
-			background-color: rgba(204, 234, 213, 1.0f);
-			color: rgba(204, 234, 213, 1.0f);
+			background-color: rgba(204, 234, 213, 0.8f);
+			color: rgba(0, 0, 0, 1.0f);
 			/*color: rgba(252, 255, 228, 0.75);*/
 			background-attachment: fixed,							fixed;
 			/*background-image: url(""), url("");*/
