--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2820,7 +2820,7 @@ input, select, textarea {
 
 		.main.style1 
 		{
-			background-color: rgba(199, 234, 227, 1.0);	
+			background-color: rgba(199, 234, 227, 0.8f);	
 			color: rgba(0.0f, 0.0f, 0.0f, 1.0f);
 		}
 
@@ -2828,7 +2828,6 @@ input, select, textarea {
 		{
 			background-color: rgba(204, 234, 213, 0.8f);
 			color: rgba(0, 0, 0, 1.0f);
-			/*color: rgba(252, 255, 228, 0.75);*/
 			background-attachment: fixed,							fixed;
 			/*background-image: url(""), url("");*/
 			background-size: auto,							cover;
@@ -2843,7 +2842,7 @@ input, select, textarea {
 				}
 
 			.main.style2 h1, .main.style2 h2, .main.style2 h3, .main.style2 h4, .main.style2 h5, .main.style2 h6, .main.style2 strong, .main.style2 b {
-				color: rgba(204, 234, 213, 1.0f);
+				background-color: rgba(204, 234, 213, 1.0f);
 			}
 
 			.main.style2 header p {
