--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2820,35 +2820,35 @@ input, select, textarea {
 
 		.main.style1 
 		{
-			background-color: rgba(199, 234, 227, 1.0f);
+			background-color: rgba(199, 234, 227, 1.0);
 		}
 
 		.main.style2 
 		{
-			background-color: rgba(204, 234, 213, 0.8f);
+			background-color: rgba(204, 234, 213, 0.8);
 			background-attachment: fixed,							fixed;
 			/*background-image: url(""), url("");*/
 			background-size: auto,							cover;
 		}
 
 			.main.style2 a {
-				border-bottom-color: rgba(204, 234, 213, 1.0f);
+				border-bottom-color: rgba(204, 234, 213, 1.0);
 			}
 
 				.main.style2 a:hover {
-					color: rgba(204, 234, 213, 1.0f);
+					color: rgba(204, 234, 213, 1.0);
 				}
 
 			.main.style2 h1, .main.style2 h2, .main.style2 h3, .main.style2 h4, .main.style2 h5, .main.style2 h6, .main.style2 strong, .main.style2 b {
-				background-color: rgba(204, 234, 213, 1.0f);
+				background-color: rgba(204, 234, 213, 1.0);
 			}
 
 			.main.style2 header p {
-				color: rgba(204, 234, 213, 1.0f);
+				color: rgba(204, 234, 213, 1.0);
 			}
 
 			.main.style2 header.major:after {
-				background: rgba(204, 234, 213, 1.0f);
+				background: rgba(204, 234, 213, 1.0);
 			}
 
 			.main.style2 input[type="submit"],
@@ -2865,7 +2865,7 @@ input, select, textarea {
 				.main.style2 input[type="button"]:hover,
 				.main.style2 button:hover,
 				.main.style2 .button:hover {
-					background-color: rgba(204, 234, 213, 1.0f); /*rgba(255, 255, 255, 0.125);*/
+					background-color: rgba(204, 234, 213, 1.0); /*rgba(255, 255, 255, 0.125);*/
 				}
 
 				.main.style2 input[type="submit"]:active,
@@ -2873,7 +2873,7 @@ input, select, textarea {
 				.main.style2 input[type="button"]:active,
 				.main.style2 button:active,
 				.main.style2 .button:active {
-					background-color: rgba(204, 234, 213, 1.0f); /* rgba(255, 255, 255, 0.25);*/
+					background-color: rgba(204, 234, 213, 1.0); /* rgba(255, 255, 255, 0.25);*/
 				}
 
 				.main.style2 input[type="submit"].primary,
@@ -2881,7 +2881,7 @@ input, select, textarea {
 				.main.style2 input[type="button"].primary,
 				.main.style2 button.primary,
 				.main.style2 .button.primary {
-					background-color: rgba(204, 234, 213, 1.0f);
+					background-color: rgba(204, 234, 213, 1.0);
 					box-shadow: inset 0 0 0 1px #ffffff !important;
 					color: #333 !important;
 				}
@@ -2891,7 +2891,7 @@ input, select, textarea {
 					.main.style2 input[type="button"].primary:hover,
 					.main.style2 button.primary:hover,
 					.main.style2 .button.primary:hover {
-						background-color: rgba(204, 234, 213, 1.0f); /*rgba(255, 255, 255, 0.125)*/ !important;
+						background-color: rgba(204, 234, 213, 1.0); /*rgba(255, 255, 255, 0.125)*/ !important;
 						color: #ffffff !important;
 					}
 
@@ -2900,7 +2900,7 @@ input, select, textarea {
 					.main.style2 input[type="button"].primary:active,
 					.main.style2 button.primary:active,
 					.main.style2 .button.primary:active {
-						background-color: rgba(204, 234, 213, 1.0f); /*rgba(255, 255, 255, 0.25)*/ !important;
+						background-color: rgba(204, 234, 213, 1.0); /*rgba(255, 255, 255, 0.25)*/ !important;
 					}
 
 			.main.style2 ul.major-icons li .icon {
