--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2820,12 +2820,12 @@ input, select, textarea {
 
 		.main.style1 
 		{
-			background-color: rgba(199, 234, 227, 1.0);
+			background-color: rgba(199, 234, 227, 1.0) !important;
 		}
 
 		.main.style2 
 		{
-			background-color: rgba(204, 234, 213, 0.8);
+			background-color: rgba(204, 234, 213, 1.0) !important;
 			background-attachment: fixed,							fixed;
 			/*background-image: url(""), url("");*/
 			background-size: auto,							cover;
