--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2837,19 +2837,19 @@ input, select, textarea {
 			}
 
 				.main.style2 a:hover {
-					color: rgba(204, 234, 213, 1.0);
+					color: rgb(0, 19, 153) !important; /*rgba(204, 234, 213, 1.0);*/
 				}
 
 			.main.style2 h1, .main.style2 h2, .main.style2 h3, .main.style2 h4, .main.style2 h5, .main.style2 h6, .main.style2 strong, .main.style2 b {
-				background-color: rgba(204, 234, 213, 1.0);
+				background-color: rgb(0, 19, 153) !important; /* rgba(204, 234, 213, 1.0);*/
 			}
 
 			.main.style2 header p {
-				color: rgba(204, 234, 213, 1.0);
+				color: rgb(0, 19, 153) !important; /*rgba(204, 234, 213, 1.0);*/
 			}
 
 			.main.style2 header.major:after {
-				background: rgba(204, 234, 213, 1.0);
+				background: rgb(0, 19, 153) !important; /*rgba(204, 234, 213, 1.0);*/
 			}
 
 			.main.style2 input[type="submit"],
@@ -2866,7 +2866,7 @@ input, select, textarea {
 				.main.style2 input[type="button"]:hover,
 				.main.style2 button:hover,
 				.main.style2 .button:hover {
-					background-color: rgba(204, 234, 213, 1.0); /*rgba(255, 255, 255, 0.125);*/
+					background-color: rgb(0, 19, 153) !important; /*rgba(204, 234, 213, 1.0);*/ /*rgba(255, 255, 255, 0.125);*/
 				}
 
 				.main.style2 input[type="submit"]:active,
@@ -2874,7 +2874,7 @@ input, select, textarea {
 				.main.style2 input[type="button"]:active,
 				.main.style2 button:active,
 				.main.style2 .button:active {
-					background-color: rgba(204, 234, 213, 1.0); /* rgba(255, 255, 255, 0.25);*/
+					background-color: rgb(0, 19, 153) !important; /*rgba(204, 234, 213, 1.0); *//* rgba(255, 255, 255, 0.25);*/
 				}
 
 				.main.style2 input[type="submit"].primary,
@@ -2882,7 +2882,7 @@ input, select, textarea {
 				.main.style2 input[type="button"].primary,
 				.main.style2 button.primary,
 				.main.style2 .button.primary {
-					background-color: rgba(204, 234, 213, 1.0);
+					background-color: rgb(0, 19, 153) !important; /*rgba(204, 234, 213, 1.0);*/
 					box-shadow: inset 0 0 0 1px #ffffff !important;
 					color: #333 !important;
 				}
@@ -2892,7 +2892,7 @@ input, select, textarea {
 					.main.style2 input[type="button"].primary:hover,
 					.main.style2 button.primary:hover,
 					.main.style2 .button.primary:hover {
-						background-color: rgba(204, 234, 213, 1.0); /*rgba(255, 255, 255, 0.125)*/ !important;
+						background-color: rgb(0, 19, 153) !important; /*rgba(204, 234, 213, 1.0); *//*rgba(255, 255, 255, 0.125)*/
 						color: #ffffff !important;
 					}
 
@@ -2901,7 +2901,7 @@ input, select, textarea {
 					.main.style2 input[type="button"].primary:active,
 					.main.style2 button.primary:active,
 					.main.style2 .button.primary:active {
-						background-color: rgba(204, 234, 213, 1.0); /*rgba(255, 255, 255, 0.25)*/ !important;
+						background-color: rgb(0, 19, 153) !important; /* rgba(204, 234, 213, 1.0);*/ /*rgba(255, 255, 255, 0.25)*/
 					}
 
 			.main.style2 ul.major-icons li .icon {
