--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2915,7 +2915,7 @@ input, select, textarea {
 
 	#header {
 		padding: 9em 0 9em 0 ;
-		background-color: #4686a0;
+		background-color: #6688af; /* #4686a0;*/
 		color: rgba(255, 255, 255, 0.75);
 		background-attachment: scroll,							scroll,							scroll;
 		background-image: url("../../images/BackgroundMountains.jpg"), url("../../images/BackgroundMountains.jpg"); /*, linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #4361c2);*/
