--- a/Pacman/assets/css/main.css
+++ b/Pacman/assets/css/main.css
@@ -2981,5 +2981,22 @@ input, select, textarea {
 						#copyright ul li:first-child {
 							margin-top: 0;
 						}
+		
+		#carousel 
+		{
+			width: 100%;
+			height: 150px;
+			background-color: #ff0000;
+			
+			overflow: visible;
+			white-space: nowrap;
+		}
+		
+		#carousel .slide
+		{
+			display: inline-block;
+		}
+		
+			
 
 	}
