--- a/Pacman/assets/css/main.css
+++ b/Pacman/assets/css/main.css
@@ -2982,20 +2982,38 @@ input, select, textarea {
 							margin-top: 0;
 						}
 		
-		#carousel 
-		{
-			width: 100%;
-			height: 150px;
-			background-color: #ff0000;
-			
-			overflow: visible;
-			white-space: nowrap;
+		* {
+			  -webkit-box-sizing: border-box;
+			  box-sizing: border-box;
+		  }
+
+		body 
+		{ 
+			font-family: sans-serif; 
 		}
-		
-		#carousel .slide
+
+		.gallery 
 		{
-			display: inline-block;
+			  background: #EEE;
 		}
+
+.gallery-cell {
+  width: 66%;
+  height: 200px;
+  margin-right: 10px;
+  background: #8C8;
+  counter-increment: gallery-cell;
+}
+
+/* cell number */
+.gallery-cell:before {
+  display: block;
+  text-align: center;
+  content: counter(gallery-cell);
+  line-height: 200px;
+  font-size: 80px;
+  color: white;
+}
 		
 			
 
