--- a/Pacman/assets/css/main.css
+++ b/Pacman/assets/css/main.css
@@ -1978,7 +1978,8 @@ input, select, textarea {
 
 			}
 
-			#main > .panel.intro {
+			#main > .panel.intro 
+			{
 				padding: 0;
 				height: 20em;
 				display: -moz-flex;
@@ -1994,87 +1995,6 @@ input, select, textarea {
 				-ms-align-items: center;
 				align-items: center;
 			}
-
-				#main > .panel.intro .pic {
-					text-decoration: none;
-					position: relative;
-					-moz-flex-grow: 0;
-					-webkit-flex-grow: 0;
-					-ms-flex-grow: 0;
-					flex-grow: 0;
-					-moz-flex-shrink: 0;
-					-webkit-flex-shrink: 0;
-					-ms-flex-shrink: 0;
-					flex-shrink: 0;
-					width: 17em;
-					height: 100%;
-				}
-
-					#main > .panel.intro .pic:before {
-						content: '';
-						position: absolute;
-						top: 0;
-						left: 0;
-						background: url("images/overlay.png");
-						width: 100%;
-						height: 100%;
-						z-index: 1;
-					}
-
-					#main > .panel.intro .pic img {
-						position: relative;
-						display: block;
-						position: absolute;
-						top: 0;
-						left: 0;
-						width: 100%;
-						height: 100%;
-						-moz-object-fit: cover;
-						-webkit-object-fit: cover;
-						-ms-object-fit: cover;
-						object-fit: cover;
-						-moz-object-position: center;
-						-webkit-object-position: center;
-						-ms-object-position: center;
-						object-position: center;
-					}
-
-					#main > .panel.intro .pic .arrow {
-						display: block;
-						position: absolute;
-						right: 0;
-						top: 50%;
-						margin-top: -1.375em;
-						width: 2.75em;
-						height: 2.75em;
-						background: #000;
-						background: rgba(0, 0, 0, 0.75);
-						color: #ffffff;
-						text-align: center;
-						line-height: 2.75em;
-						font-size: 1.5em;
-						z-index: 1;
-						-moz-transition: width .15s ease-in-out, padding-right .15s ease-in-out;
-						-webkit-transition: width .15s ease-in-out, padding-right .15s ease-in-out;
-						-ms-transition: width .15s ease-in-out, padding-right .15s ease-in-out;
-						transition: width .15s ease-in-out, padding-right .15s ease-in-out;
-					}
-
-						#main > .panel.intro .pic .arrow:before {
-							position: relative;
-							padding-right: 0;
-							top: 0.125em;
-						}
-
-						#main > .panel.intro .pic .arrow span {
-							display: block;
-							text-indent: -9999px;
-						}
-
-					#main > .panel.intro .pic:hover .arrow {
-						width: 3em;
-						padding-right: 0.25em;
-					}
 
 				#main > .panel.intro header {
 					-moz-flex-grow: 1;
@@ -2111,11 +2031,6 @@ input, select, textarea {
 						height: auto;
 					}
 
-						#main > .panel.intro .pic {
-							height: 25em;
-							width: 100%;
-						}
-
 						#main > .panel.intro header {
 							padding: 4em;
 							text-align: center;
@@ -2124,10 +2039,6 @@ input, select, textarea {
 				}
 
 				@media screen and (max-width: 736px) {
-
-					#main > .panel.intro .pic {
-						height: 20em;
-					}
 
 					#main > .panel.intro header {
 						padding: 2.75em 2em 2.5em 2em;
