--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2248,7 +2248,7 @@ input, select, textarea {
 
 			#main > section.one {
 				background-color: #81918E;
-				background-image: url("../../images/banner.jpg");
+				background-image: url("../../images/sky.jpg");
 			}
 
 			#main > section.two {
