--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2079,7 +2079,7 @@ input, select, textarea {
 
 		#header .icons {
 			font-size: 0.8em;
-			text-align: center;
+			text-align: left;
 		}
 
 			#header .icons a {
@@ -2213,7 +2213,7 @@ input, select, textarea {
 			overflow: hidden;
 			padding: 4em 0;
 			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
-			text-align: left;
+			text-align: centre;
 			background-image: url("images/sky.jpeg");
 		}
 
